# svitoch

./: .gitignore  Dockerfile  README.md  docker-compose.yml  ideas.md  pyproject.toml
notebooks/: demo_1.ipynb  demo_2.ipynb
src/: app.py
src/chains/: __init__.py  course_chain.py  lesson_chain.py  topics_chain.py
src/chains/models/: __init__.py  course_model.py
src/configuration/: __init__.py  configuration.py
src/data_storage/: __init__.py  data_controller.py  db_client.py  db_controller.py
src/data_storage_module/: data_controller.py  db_controller.py  db_tables.py
src/llm_module/chains/: __init__.py  lesson_chain.py
src/llm_module/llms/: __init__.py  openai_3_model.py  openai_4_model.py
src/llm_module/prompts/: __init__.py  course_prompts.py
src/llms/: __init__.py  openai_3_model.py  openai_4_model.py  openai_chat.py
src/prompts/: __init__.py  course_prompts.py
src/rest_api/: __init__.py  app.py  middleware.py
src/rest_api/controllers/: __init__.py  course_controller.py  lessons_controller.py  topics_controller.py
src/rest_api/models/: __init__.py  standard.py  topics.py
src/rest_api/routers/: __init__.py  course.py  courses.py  lessons.py  topics.py
src/rest_api_module/: app.py
src/rest_api_module/controllers/: __init__.py  course_controller.py  lessons_controller.py
src/rest_api_module/models/: __init__.py  lessons.py  standard.py
src/rest_api_module/routers/: courses.py  lessons.py
src/state_module/: state_service.py
